# qa_guru_python_poetry

./: pyproject.toml
